--- a/template/options.html
+++ b/template/options.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <style>
-      p {
-        width: 100px;
-        text-align: center;
-      }
-    </style>
+    <title>插件设置</title>
   </head>
   <body>
-    <p>hello world</p>
+    Favorite color:
+    <select id="color">
+      <option value="red">red</option>
+      <option value="green">green</option>
+      <option value="blue">blue</option>
+      <option value="yellow">yellow</option>
+    </select>
+    <button id="save">Save</button>
+    <script src="../script/options.js"></script>
   </body>
 </html>
